--- a/static/style.css
+++ b/static/style.css
@@ -2,4 +2,47 @@
 html{
     font-family: Calibri;
     font-size: large;
+    background-color: aqua;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: 1fr 7fr;
+}
+
+#sidebar{
+    background-color: blueviolet;
+}
+
+#main{
+    background-color: blue;
+}
+
+.conversation{
+    border: 1px, solid, black;
+    border-radius: 30px;
+    width: 100%;
+    height: 50px;
+    background-color: rgb(65, 68, 99);
+    font-size: 1.5rem;
+}
+
+.message{
+    margin: 1rem;
+    background-color: rgb(65, 68, 99);
+    border: 1px, solid, black;
+    border-radius: 20px;
+    width: max-content;
+}
+
+.username{
+    margin: 8px 8px 0;
+}
+
+.messageBody{
+    margin: 8px 8px 0;
+}
+
+.date{
+    margin: 8px 8px 5px;
 }
